--- a/index.html
+++ b/index.html
@@ -454,12 +454,12 @@
             <button class="slider_button2"><img src="/img/slider-button-right.svg" alt="button-left"></button>
         </div>
         <div class="slider_image">
-            <img class="slider_image1" src="/img/recomendation1.png"  alt="recomendation1">
-            <img class="slider_image2" src="/img/recomendation2.png" alt="recomendation2">
-            <img class="slider_image3" src="/img/recomendation3.png" alt="recomendation3">
-            <img class="slider_image4" src="/img/recomendation1.png" alt="recomendation4">
-            <img class="slider_image5" src="/img/recomendation2.png" alt="recomendation5">
-            <img class="slider_image6" src="/img/recomendation3.png" alt="recomendation6">
+            <img class="slider_image1 slide-active" src="/img/recomendation1.png"  alt="recomendation1">
+            <img class="slider_image2 slide-active" src="/img/recomendation2.png" alt="recomendation2">
+            <img class="slider_image3 slide-active" src="/img/recomendation3.png" alt="recomendation3">
+            <img class="slider_image4 slide-disable" src="/img/recomendation1.png" alt="recomendation4">
+            <img class="slider_image5 slide-disable" src="/img/recomendation2.png" alt="recomendation5">
+            <img class="slider_image6 slide-disable" src="/img/recomendation3.png" alt="recomendation6">
         </div>
     </div>
 </div>
