--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <img class="slider_image3 slide-active" src="/img/recomendation3.png" alt="recomendation3">
             <img class="slider_image4 slide-disable" src="/img/recomendation1.png" alt="recomendation4">
             <img class="slider_image5 slide-disable" src="/img/recomendation2.png" alt="recomendation5">
-            <img class="slider_image6 slide-disable" src="/img/recomendation3.png" alt="recomendation6">
+            <!-- <img class="slider_image6 slide-disable" src="/img/recomendation3.png" alt="recomendation6"> -->
         </div>
     </div>
 </div>
