--- a/index.html
+++ b/index.html
@@ -463,6 +463,61 @@
         </div>
     </div>
 </div>
+<div class="tarifs-prices">
+    <h2 class="table_title">Tariffs and prices</h2>
+    <div class="tarifs-prices_table">
+        <table>
+            <tr>
+                <th>Translation language</th>
+                <th>ECONOMY</th>
+                <th>STANDARD</th>
+                <th>BUSINESS</th>
+            </tr>
+            <tr>
+                <td>English</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+            </tr>
+            <tr>
+                <td>German</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+            </tr>
+            <tr>
+                <td>Spanish</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+            </tr>
+            <tr>
+                <td>Italian</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+            </tr>
+            <tr>
+                <td>Chinese</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+            </tr>
+            <tr>
+                <td>Polish</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+            </tr>
+            <tr>
+                <td>French</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+                <td>50 RON</td>
+            </tr>
+        </table>
+    </div>
+</div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
