--- a/index.html
+++ b/index.html
@@ -463,59 +463,64 @@
         </div>
     </div>
 </div>
-<div class="tarifs-prices">
-    <h2 class="table_title">Tariffs and prices</h2>
-    <div class="tarifs-prices_table">
-        <table>
-            <tr>
-                <th>Translation language</th>
-                <th>ECONOMY</th>
-                <th>STANDARD</th>
-                <th>BUSINESS</th>
-            </tr>
-            <tr>
-                <td>English</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-            </tr>
-            <tr>
-                <td>German</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-            </tr>
-            <tr>
-                <td>Spanish</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-            </tr>
-            <tr>
-                <td>Italian</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-            </tr>
-            <tr>
-                <td>Chinese</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-            </tr>
-            <tr>
-                <td>Polish</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-            </tr>
-            <tr>
-                <td>French</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-                <td>50 RON</td>
-            </tr>
-        </table>
+<div class="tarifs">
+    <div class="tarifs_section container">
+        <div class="tarifs_section-all">
+            <h2 class="table_title">Tariffs and prices</h2>
+            <img src="./img/ImgLangue.png" alt="ImgLangue">
+            <div class="tarifs_table-section-table">
+                <table class="tarifs_table">
+                    <tr>
+                        <th class="th1">Translation language</th>
+                        <th class="th2">ECONOMY</th>
+                        <th class="th3">STANDARD</th>
+                        <th class="th4">BUSINESS</th>
+                    </tr>
+                    <tr>
+                        <td class="td1">English</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                    </tr>
+                    <tr>
+                        <td class="td1">German</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                    </tr>
+                    <tr>
+                        <td class="td1">Spanish</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                    </tr>
+                    <tr>
+                        <td class="td1">Italian</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                    </tr>
+                    <tr>
+                        <td class="td1">Chinese</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                    </tr>
+                    <tr>
+                        <td class="td1">Polish</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                    </tr>
+                    <tr>
+                        <td class="td1">French</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                        <td>50 RON</td>
+                    </tr>
+                </table>
+            </div>
+        </div>  
     </div>
 </div>
 </body>
