--- a/index.html
+++ b/index.html
@@ -520,6 +520,9 @@
                     </tr>
                 </table>
             </div>
+            <div class="tarifs-button">
+                <button class="tarifs-button">Show more!</button>
+            </div>
         </div>  
     </div>
 </div>
