--- a/index.html
+++ b/index.html
@@ -526,6 +526,19 @@
         </div>  
     </div>
 </div>
+<div class="questions-answers">
+    <div class="questions-answers_wallpaper">
+        <h2 class="questions-answers-h2">Questions and answers</h2>
+        <div class="questions-answers_section">
+            <p><strong>How to calculate the translation page?</strong></p>
+            <p>
+                A reference (or translation) page is taken to be a page 
+                consisting of 30 lines, each of which contains approximately 60 characters. 
+                Thus, the total number of printed characters with spaces in the translation page is 1800.
+            </p>
+        </div>
+    </div>
+</div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
