--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/sass/style1.css">
 </head>
 <body>
+<!-- Header ==================================================================================================================================== -->
     <div class="header">
         <div class="header_section">
             <div class="container header_top">
@@ -48,6 +49,8 @@
             </ul>
         </div>
     </div>
+<!-- Header ==================================================================================================================================== -->
+<!-- Wallpaper ==================================================================================================================================== -->
     <div class="wallpaper">
         <div class="background">
             <div class="section_top container">
@@ -137,6 +140,8 @@
             </div>
         </div>
     </div>
+<!-- Wallpaper ==================================================================================================================================== -->
+<!-- Section bottom ==================================================================================================================================== -->
     <div class="section_bottom container">
         <div class="section_card card1">
             <div class="section_menu1">
@@ -167,6 +172,7 @@
             <div class="section_menu3">Express delivery</div>
         </div>
     </div>
+<!-- Section bottom ==================================================================================================================================== -->
 <!-- Menu Card Services ====================================================================================== -->
     <div class="services">
         <h2 class="services_our-services container">Our Services</h2>
@@ -235,6 +241,8 @@
     </div>
     <div class="container services_top-section selectorClass ">
     </div>
+<!-- Menu Card Services ==================================================================================================================================== -->
+<!-- Aditional services ==================================================================================================================================== -->
     <div class="aditional-services container">
         <div class="aditional-services_section">
             <h2 class="aditional-services_title">Additional services</h2>
@@ -254,6 +262,8 @@
             </div>
         </div>
     </div>
+<!-- Aditional services ==================================================================================================================================== -->
+<!-- Our company section ==================================================================================================================================== -->
     <div class="our-company">
         <div class="our-company_image">
             <div class="our-company_section container">
@@ -280,6 +290,7 @@
             </div>
         </div>
     </div>
+<!-- Our company section ==================================================================================================================================== -->
 <!-- Advantage Section ==================================================================================================================================== -->
     <div class="advantage-section">
         <h2>15 reasons to choose us!</h2>
@@ -405,6 +416,7 @@
         </div>
     </div>
 <!-- Section3 ==================================================================================================================================== -->
+<!-- Order Translation ==================================================================================================================================== -->
     <div class="order-translation">
         <div class="order-translation_section">
             <h2 class="order-translation_title">How to order a translation?</h2>
@@ -463,6 +475,8 @@
         </div>
     </div>
 </div>
+<!-- Slider ==================================================================================================================================== -->
+<!-- Tarifs ==================================================================================================================================== -->
 <div class="tarifs">
     <div class="tarifs_section container">
         <div class="tarifs_section-all">
@@ -526,19 +540,30 @@
         </div>  
     </div>
 </div>
-<div class="questions-answers">
+<!-- Tarifs ==================================================================================================================================== -->
+<!-- Question ==================================================================================================================================== -->
+<div class="questions-answers container">
     <div class="questions-answers_wallpaper">
-        <h2 class="questions-answers-h2">Questions and answers</h2>
+        <h2>Questions and answers</h2>
         <div class="questions-answers_section">
-            <p><strong>How to calculate the translation page?</strong></p>
-            <p>
-                A reference (or translation) page is taken to be a page 
-                consisting of 30 lines, each of which contains approximately 60 characters. 
-                Thus, the total number of printed characters with spaces in the translation page is 1800.
-            </p>
+            <span></span>
+            <div class="questions-answers_description">
+                <div class="questions-answers_description-detailed">
+                    <p><strong>How to calculate the translation page?</strong></p>
+                    <p>
+                        A reference (or translation) page is taken to be a page 
+                        consisting of 30 lines, each of which contains approximately 60 characters. 
+                        Thus, the total number of printed characters with spaces in the translation page is 1800.
+                    </p>
+                </div>
+                <img class="question-open" src="/img/question-open.svg" alt="question-open">
+                <img class="question-close" src="/img/question-close.svg" alt="question-open">
+            </div>
+            <span></span>
         </div>
     </div>
 </div>
+<!-- Question ==================================================================================================================================== -->
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
