--- a/index.html
+++ b/index.html
@@ -550,14 +550,20 @@
             <div class="questions-answers_description">
                 <div class="questions-answers_description-detailed">
                     <p><strong>How to calculate the translation page?</strong></p>
-                    <p>
+                    <p class="question-answers_description-bottom">
                         A reference (or translation) page is taken to be a page 
-                        consisting of 30 lines, each of which contains approximately 60 characters. 
+                        consisting of 30 lines, each of which contains approximately<br> 60 characters. 
                         Thus, the total number of printed characters with spaces in the translation page is 1800.
                     </p>
                 </div>
-                <img class="question-open" src="/img/question-open.svg" alt="question-open">
-                <img class="question-close" src="/img/question-close.svg" alt="question-open">
+                <div class="questions-answers_image">
+                    <button class="question-open">
+                        <img  src="/img/question-open.svg" alt="question-open">
+                    </button>
+                    <button class="question-close">
+                        <img  src="/img/question-close.svg" alt="question-open">
+                    </button>
+                </div>
             </div>
             <span></span>
         </div>
