--- a/index.html
+++ b/index.html
@@ -567,6 +567,116 @@
             </div>
             <span></span>
         </div>
+        <div class="questions-answers_section">
+            <span></span>
+            <div class="questions-answers_description">
+                <div class="questions-answers_description-detailed">
+                    <p><strong>What is an apostille?</strong></p>
+                    <p class="question-answers_description-bottom2 description-disable">
+                        A reference (or translation) page is taken to be a page 
+                        consisting of 30 lines, each of which contains approximately<br> 60 characters. 
+                        Thus, the total number of printed characters with spaces in the translation page is 1800.
+                    </p>
+                </div>
+                <div class="questions-answers_image">
+                    <button class="question-open question-active">
+                        <img  src="/img/question-open.svg" alt="question-open">
+                    </button>
+                    <button class="question-close question-disable">
+                        <img  src="/img/question-close.svg" alt="question-open">
+                    </button>
+                </div>
+            </div>
+            <span></span>
+        </div>
+        <div class="questions-answers_section">
+            <span></span>
+            <div class="questions-answers_description">
+                <div class="questions-answers_description-detailed">
+                    <p><strong>What is an apostille?</strong></p>
+                    <p class="question-answers_description-bottom2 description-disable">
+                        A reference (or translation) page is taken to be a page 
+                        consisting of 30 lines, each of which contains approximately<br> 60 characters. 
+                        Thus, the total number of printed characters with spaces in the translation page is 1800.
+                    </p>
+                </div>
+                <div class="questions-answers_image">
+                    <button class="question-open question-active">
+                        <img  src="/img/question-open.svg" alt="question-open">
+                    </button>
+                    <button class="question-close question-disable">
+                        <img  src="/img/question-close.svg" alt="question-open">
+                    </button>
+                </div>
+            </div>
+            <span></span>
+        </div>
+        <div class="questions-answers_section">
+            <span></span>
+            <div class="questions-answers_description">
+                <div class="questions-answers_description-detailed">
+                    <p><strong>What is an apostille?</strong></p>
+                    <p class="question-answers_description-bottom2 description-disable">
+                        A reference (or translation) page is taken to be a page 
+                        consisting of 30 lines, each of which contains approximately<br> 60 characters. 
+                        Thus, the total number of printed characters with spaces in the translation page is 1800.
+                    </p>
+                </div>
+                <div class="questions-answers_image">
+                    <button class="question-open question-active">
+                        <img  src="/img/question-open.svg" alt="question-open">
+                    </button>
+                    <button class="question-close question-disable">
+                        <img  src="/img/question-close.svg" alt="question-open">
+                    </button>
+                </div>
+            </div>
+            <span></span>
+        </div>
+        <div class="questions-answers_section">
+            <span></span>
+            <div class="questions-answers_description">
+                <div class="questions-answers_description-detailed">
+                    <p><strong>What is an apostille?</strong></p>
+                    <p class="question-answers_description-bottom2 description-disable">
+                        A reference (or translation) page is taken to be a page 
+                        consisting of 30 lines, each of which contains approximately<br> 60 characters. 
+                        Thus, the total number of printed characters with spaces in the translation page is 1800.
+                    </p>
+                </div>
+                <div class="questions-answers_image">
+                    <button class="question-open question-active">
+                        <img  src="/img/question-open.svg" alt="question-open">
+                    </button>
+                    <button class="question-close question-disable">
+                        <img  src="/img/question-close.svg" alt="question-open">
+                    </button>
+                </div>
+            </div>
+            <span></span>
+        </div>
+        <div class="questions-answers_section">
+            <span></span>
+            <div class="questions-answers_description">
+                <div class="questions-answers_description-detailed">
+                    <p><strong>What is an apostille?</strong></p>
+                    <p class="question-answers_description-bottom2 description-disable">
+                        A reference (or translation) page is taken to be a page 
+                        consisting of 30 lines, each of which contains approximately<br> 60 characters. 
+                        Thus, the total number of printed characters with spaces in the translation page is 1800.
+                    </p>
+                </div>
+                <div class="questions-answers_image">
+                    <button class="question-open question-active">
+                        <img  src="/img/question-open.svg" alt="question-open">
+                    </button>
+                    <button class="question-close question-disable">
+                        <img  src="/img/question-close.svg" alt="question-open">
+                    </button>
+                </div>
+            </div>
+            <span></span>
+        </div>
     </div>
 </div>
 <!-- Question ==================================================================================================================================== -->
