--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
             <div class="questions-answers_description">
                 <div class="questions-answers_description-detailed">
                     <p><strong>What is an apostille?</strong></p>
-                    <p class="question-answers_description-bottom2 description-disable">
+                    <p class="question-answers_description-bottom1 description-disable">
                         A reference (or translation) page is taken to be a page 
                         consisting of 30 lines, each of which contains approximately<br> 60 characters. 
                         Thus, the total number of printed characters with spaces in the translation page is 1800.
@@ -593,8 +593,8 @@
             <span></span>
             <div class="questions-answers_description">
                 <div class="questions-answers_description-detailed">
-                    <p><strong>What is an apostille?</strong></p>
-                    <p class="question-answers_description-bottom2 description-disable">
+                    <p><strong>What is the difference between apostille and legalization?</strong></p>
+                    <p class="question-answers_description-bottom1 description-disable">
                         A reference (or translation) page is taken to be a page 
                         consisting of 30 lines, each of which contains approximately<br> 60 characters. 
                         Thus, the total number of printed characters with spaces in the translation page is 1800.
@@ -615,8 +615,8 @@
             <span></span>
             <div class="questions-answers_description">
                 <div class="questions-answers_description-detailed">
-                    <p><strong>What is an apostille?</strong></p>
-                    <p class="question-answers_description-bottom2 description-disable">
+                    <p><strong>How can payment be made?</strong></p>
+                    <p class="question-answers_description-bottom1 description-disable">
                         A reference (or translation) page is taken to be a page 
                         consisting of 30 lines, each of which contains approximately<br> 60 characters. 
                         Thus, the total number of printed characters with spaces in the translation page is 1800.
@@ -637,8 +637,8 @@
             <span></span>
             <div class="questions-answers_description">
                 <div class="questions-answers_description-detailed">
-                    <p><strong>What is an apostille?</strong></p>
-                    <p class="question-answers_description-bottom2 description-disable">
+                    <p><strong>How is the transfer time calculated?</strong></p>
+                    <p class="question-answers_description-bottom1 description-disable">
                         A reference (or translation) page is taken to be a page 
                         consisting of 30 lines, each of which contains approximately<br> 60 characters. 
                         Thus, the total number of printed characters with spaces in the translation page is 1800.
@@ -659,8 +659,8 @@
             <span></span>
             <div class="questions-answers_description">
                 <div class="questions-answers_description-detailed">
-                    <p><strong>What is an apostille?</strong></p>
-                    <p class="question-answers_description-bottom2 description-disable">
+                    <p><strong>What is the difference between consecutive and simultaneous translation?</strong></p>
+                    <p class="question-answers_description-bottom1 description-disable">
                         A reference (or translation) page is taken to be a page 
                         consisting of 30 lines, each of which contains approximately<br> 60 characters. 
                         Thus, the total number of printed characters with spaces in the translation page is 1800.
