--- a/index.html
+++ b/index.html
@@ -680,6 +680,10 @@
     </div>
 </div>
 <!-- Question ==================================================================================================================================== -->
+<!-- Flags ==================================================================================================================================== -->
+<div class="flags container">
+    <div class="flags_img"></div>
+</div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
