--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
             </div>
             <span></span>
         </div>
-        <div class="questions-answers_section">
+        <div class="questions-answers_section question-padding">
             <span></span>
             <div class="questions-answers_description">
                 <div class="questions-answers_description-detailed">
@@ -682,7 +682,7 @@
 <!-- Question ==================================================================================================================================== -->
 <!-- Flags ==================================================================================================================================== -->
 <div class="flags container">
-    <div class="flags_img"></div>
+    <div class="flags_img"><img src="/img/flags-group.png" alt="Flags-roup"></div>
 </div>
 </body>
 <script src="js/JavaScript.js"></script>
