--- a/index.html
+++ b/index.html
@@ -684,6 +684,11 @@
 <div class="flags container">
     <div class="flags_img"><img src="/img/flags-group.png" alt="Flags-roup"></div>
 </div>
+<!-- Flags ==================================================================================================================================== -->
+<!-- Cost Calculation ==================================================================================================================================== -->
+<div class="cost-calculation container">
+    <div class="cost-calculation_section"></div>
+</div>
 </body>
 <script src="js/JavaScript.js"></script>
 </html>
