--- a/index.html
+++ b/index.html
@@ -691,55 +691,57 @@
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
 <!-- Footer ==================================================================================================================================== -->
-<div class="footer container">
-    <div class="colum1">
-        <div class="column1_logo"><img src="/img/logo1.svg" alt="logo"></div>
-        <div class="column1_logo-description"><span>Translation agency <br>Universal in Bucharest</span></div>
-        <div class="column1_contact"><span>Contact us:</span></div>
-        <div class="column1_buttons">
-            <button class="contact-us"><img src="img/whatsapp.svg" alt="whatsapp">write to whatsapp</button>
-            <button class="contact-us"><img src="img/instagram.svg" alt="instagram">write to instagram</button>
-            <button class="contact-us"><img src="img/telegram.svg" alt="telegram">write to telegram</button>
+<div class="footer-background">
+    <div class="footer container">
+        <div class="column1">
+            <div class="column1_logo"><img src="/img/logo1.svg" alt="logo"></div>
+            <div class="column1_logo-description"><span>Translation agency <br>Universal in Bucharest</span></div>
+            <div class="column1_contact"><span>Contact us:</span></div>
+            <div class="column1_buttons">
+                <button class="contact-us"><img src="img/whatsapp.svg" alt="whatsapp">WHATSAPP</button>
+                <button class="contact-us"><img src="img/instagram.svg" alt="instagram">INSTAGRAM</button>
+                <button class="contact-us"><img src="img/telegram.svg" alt="telegram">TELEGRAM</button>
+            </div>
         </div>
-    </div>
-    <div class="column2">
-        <h4>For client</h4>
-        <ul>
-            <li>services</li>
-            <li>prices</li>
-            <li>our company</li>
-            <li>request</li>
-            <li>advantages</li>
-            <li>reviews</li>
-            <li>Questions and answers</li>
-            <li>contacts</li>
-        </ul>
-    </div>
-    <div class="column3">
-        <h4>Our services</h4>
-        <ul>
-            <li>Personal documents</li>
-            <li>Legal Translation</li>
-            <li>Technical translation</li>
-            <li>Medical translation</li>
-            <li>Literary translation</li>
-            <li>Translation</li>
-            <li>Notarization</li>
-            <li>Apostille</li>
-        </ul>
-    </div>
-    <div class="column4">
-        <h4>CONTACT</h4>
-        <div class="column4_tel">
-            <a href="tel:+40 740 618 928" >+40 740 618 928</a>
-            <a href="tel:+40 749 644 286" >+40 749 644 286</a>
+        <div class="column">
+            <h4>For client</h4>
+            <ul>
+                <li>services</li>
+                <li>prices</li>
+                <li>our company</li>
+                <li>request</li>
+                <li>advantages</li>
+                <li>reviews</li>
+                <li>Questions and answers</li>
+                <li>contacts</li>
+            </ul>
         </div>
-        <div class="column4_email">
-            <a href="email:dorin.ghetus98@gmail.com">dorin.ghetus98@gmail.com</a>
+        <div class="column">
+            <h4>Our services</h4>
+            <ul>
+                <li>Personal documents</li>
+                <li>Legal Translation</li>
+                <li>Technical translation</li>
+                <li>Medical translation</li>
+                <li>Literary translation</li>
+                <li>Translation</li>
+                <li>Notarization</li>
+                <li>Apostille</li>
+            </ul>
         </div>
-        <div class="column4_adress">
-            <strong>Adress:</strong>
-            <span>Str.Vasile Lupu 94A<br> Bloc G1 Et.10 ap.1</span>
+        <div class="column column4">
+            <h4>CONTACT</h4>
+            <div class="column4_tel">
+                <a href="tel:+40 740 618 928" >+40 740 618 928</a>
+                <a href="tel:+40 749 644 286" >+40 749 644 286</a>
+            </div>
+            <div class="column4_email">
+                <a href="email:dorin.ghetus98@gmail.com">dorin.ghetus98@gmail.com</a>
+            </div>
+            <div class="column4_adress">
+                <strong>Adress:</strong>
+                <span>Str.Vasile Lupu 94A<br> Bloc G1 Et.10 ap.1</span>
+            </div>
         </div>
     </div>
 </div>
