--- a/index.html
+++ b/index.html
@@ -706,27 +706,27 @@
         <div class="column">
             <h4>For client</h4>
             <ul>
-                <li>services</li>
-                <li>prices</li>
-                <li>our company</li>
-                <li>request</li>
-                <li>advantages</li>
-                <li>reviews</li>
-                <li>Questions and answers</li>
-                <li>contacts</li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">prices</a></li>
+                <li><a href="#">our company</a></li>
+                <li><a href="#">request</a></li>
+                <li><a href="#">advantages</a></li>
+                <li><a href="#">reviews</a></li>
+                <li><a href="#">Questions and answers</a></li>
+                <li><a href="#">contacts</a></li>
             </ul>
         </div>
         <div class="column">
             <h4>Our services</h4>
             <ul>
-                <li>Personal documents</li>
-                <li>Legal Translation</li>
-                <li>Technical translation</li>
-                <li>Medical translation</li>
-                <li>Literary translation</li>
-                <li>Translation</li>
-                <li>Notarization</li>
-                <li>Apostille</li>
+                <li><a href="#">Personal documents</a></li>
+                <li><a href="#">Legal Translation</a></li>
+                <li><a href="#">Technical translation</a></li>
+                <li><a href="#">Medical translation</a></li>
+                <li><a href="#">Literary translation</a></li>
+                <li><a href="#">Translation</a></li>
+                <li><a href="#">Notarization</a></li>
+                <li><a href="#">Apostille</a></li>
             </ul>
         </div>
         <div class="column column4">
