--- a/index.html
+++ b/index.html
@@ -687,7 +687,12 @@
 <!-- Flags ==================================================================================================================================== -->
 <!-- Cost Calculation ==================================================================================================================================== -->
 <div class="cost-calculation container">
-    <div class="cost-calculation_section"></div>
+    <div class="cost-calculation_section">
+        <h2>Cost calculation</h2>
+        <div class="const-calculation_steps"></div>
+        <div class="const-calculation_language"></div>
+        <div class="cost-calculation_description"></div>
+    </div>
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
 <!-- Footer ==================================================================================================================================== -->
