--- a/index.html
+++ b/index.html
@@ -689,9 +689,27 @@
 <div class="cost-calculation container">
     <div class="cost-calculation_section">
         <h2>Cost calculation</h2>
-        <div class="const-calculation_steps"></div>
+        <div class="const-calculation_steps steps">
+            <div class="steps_section">
+                <div class="steps_line">
+                    <p class="steps_line1 line-disable"></p>
+                    <p class="steps_line2 line-disable"></p>
+                </div>
+                <div class="modal_operations">
+                    <div class="number1 modal_number number-active"><span>1</span></div>
+                    <div class="number2 modal_number number-disable"><span>2</span></div>
+                    <div class="number3 modal_number number-disable"><span>3</span></div>
+                </div>
+                <div class="modal_steps-description">
+                    <span class="step1 modal_steps-span steps-active">Translation direction</span>
+                    <span class="step2 modal_steps-span steps-disable" >Text and timing</span>
+                    <span class="step3 modal_steps-span steps-disable">Contact details</span>
+                </div>
+            </div>
+        </div>
         <div class="const-calculation_language"></div>
         <div class="cost-calculation_description"></div>
+        <div class="cost-calculation_buttons"></div>
     </div>
 </div>
 <!-- Cost Calculation ==================================================================================================================================== -->
