--- a/index.html
+++ b/index.html
@@ -707,7 +707,30 @@
                 </div>
             </div>
         </div>
-        <div class="const-calculation_language"></div>
+        <div class="const-calculation_language">
+            <span>1 Select the translation direction</span>
+            <div class="cost-calculation_select">
+                <select class="form_translate" name="user_profile_color_2" required="required">
+                    <option value="">Translation from</option>
+                    <option value="1">Romanian</option>
+                    <option value="2">English</option>
+                    <option value="3">German</option>
+                    <option value="4">French</option>
+                    <option value="5">Italian</option>
+                </select>
+                <div class="form_arrow">
+                    <img src="/img/arrow-logo.svg" alt="arrow">
+                </div>
+                <select class="form_translate" name="user_profile_color_2" required="required">
+                    <option value="">Translation to</option>
+                    <option value="1">Romanian</option>
+                    <option value="2">English</option>
+                    <option value="3">German</option>
+                    <option value="4">French</option>
+                    <option value="5">Italian</option>
+                </select>
+            </div>
+        </div>
         <div class="cost-calculation_description"></div>
         <div class="cost-calculation_buttons"></div>
     </div>
